# XRobot

./: .clang-format  .clangd  .gitignore  .gitmodules  .gitmodules_cn  .mxproject  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DevA.ioc  DevC.ioc  README.md  project.py  pyproject.toml  robomaster.ioc
src/: CMakeLists.txt  Kconfig  application.cpp  application.hpp  hardware_container.hpp  main.c  main.cpp  module.cpp  peripheral_manager.cpp  peripheral_manager.hpp  platform_adapter.cpp
src/app/: CMakeLists.txt  main.c
src/bsp/: CMakeLists.txt  adc.h  bsp.h  bsp_adc.h  bsp_buzzer.h  bsp_can.c  bsp_can.h  bsp_delay.c  bsp_delay.h  bsp_flash.h  bsp_fric.h  bsp_gpio.c  bsp_gpio.h  bsp_i2c.c  bsp_i2c.h  bsp_laser.h  bsp_led.h  bsp_mm.c  bsp_mm.h  bsp_power.h  bsp_pwm.h  bsp_rand.h  bsp_servo.h  bsp_spi.c  bsp_spi.h  bsp_timer.c  bsp_timer.h  bsp_uart.c  bsp_uart.h  bsp_usb.c  bsp_usb.h  buzzer.h  can.h  crc32.h  delay.h  flash.h  fric.h  gpio.h  i2c.h  laser.h  (+5 more)
src/bsp/rm_a/: adc.c  buzzer.c  delay.c  flash.c  fric.c  laser.c  led.c  power.c  pwm.c  rand.c  servo.c  spi.c  uart.c  usb.c
src/bsp/rm_c/: adc.c  bsp_adc.c  bsp_buzzer.c  bsp_can.c  bsp_crc32.c  bsp_delay.c  bsp_flash.c  bsp_fric.c  bsp_gpio.c  bsp_i2c.c  bsp_laser.c  bsp_led.c  bsp_mm.c  bsp_pwm.c  bsp_rand.c  bsp_servo.c  bsp_spi.c  bsp_timer.c  bsp_uart.c  bsp_usb.c  buzzer.c  can.c  crc32.c  delay.c  flash.c  fric.c  gpio.c  i2c.c  laser.c  led.c  mm.c  pwm.c  rand.c  servo.c  spi.c  uart.c  usb.c
src/component/: CMakeLists.txt  FreeRTOS_CLI.h  ahrs.c  capacity.h  comp_actuator.cpp  comp_actuator.hpp  comp_ahrs.c  comp_ahrs.cpp  comp_ahrs.h  comp_ahrs.hpp  comp_capacity.c  comp_capacity.cpp  comp_capacity.h  comp_capacity.hpp  comp_cf.c  comp_cf.cpp  comp_cf.h  comp_cf.hpp  comp_cmd.c  comp_cmd.cpp  comp_cmd.h  comp_cmd.hpp  comp_crc16.c  comp_crc16.cpp  comp_crc16.h  comp_crc16.hpp  comp_crc8.c  comp_crc8.cpp  comp_crc8.h  comp_crc8.hpp  comp_error_detect.c  comp_error_detect.h  comp_ff.c  comp_ff.h  comp_fifo.c  comp_fifo.h  comp_filter.c  comp_filter.cpp  comp_filter.h  comp_filter.hpp  (+43 more)
src/core/: CMakeLists.txt  can.c  dcmi.h  dma.c  freertos.c  i2c.c  main.h  rng.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/device/: CMakeLists.txt  Kconfig  ai.c  bmi088.c  can.c  can.h  dev.h  dev.hpp  dev_actuator.cpp  dev_actuator.hpp  dev_adc.c  dev_adc.h  dev_ai.c  dev_ai.cpp  dev_ai.h  dev_ai.hpp  dev_bmi088.c  dev_bmi088.cpp  dev_bmi088.h  dev_bmi088.hpp  dev_buzzer.c  dev_buzzer.cpp  dev_buzzer.h  dev_buzzer.hpp  dev_can.c  dev_can.cpp  dev_can.h  dev_can.hpp  dev_cap.c  dev_cap.cpp  dev_cap.h  dev_cap.hpp  dev_dr16.c  dev_dr16.cpp  dev_dr16.h  dev_dr16.hpp  dev_fric.c  dev_fric.h  dev_ist8310.c  dev_ist8310.cpp  (+42 more)
src/device/ahrs/: dev_ahrs.cpp  dev_ahrs.hpp
src/device/ahrs-9/: Kconfig  dev_ahrs.cpp  dev_ahrs.hpp
src/device/ai/: Kconfig  dev_ai.cpp  dev_ai.hpp  info.cmake
src/device/blink_led/: dev_blink_led.cpp  dev_blink_led.hpp
src/device/bmi088/: Kconfig  dev_bmi088.cpp  dev_bmi088.hpp  info.cmake
src/device/bq27220/: dev_bq27220.cpp  dev_bq27220.hpp  info.cmake
src/device/buzzer/: dev_buzzer.cpp  info.cmake
src/device/can/: dev_can.cpp  dev_can.hpp  info.cmake
src/device/canfd/: dev_can.cpp  dev_can.hpp  dev_canfd.cpp  dev_canfd.hpp
src/device/cap/: Kconfig  dev_cap.cpp  dev_cap.hpp  info.cmake
src/device/custom_controller/: dev_custom_controller.cpp  dev_custom_controller.hpp
src/device/damiaomotor/: dev_damiaomotor.cpp  dev_damiaomotor.hpp
src/device/dr16/: Kconfig  dev_dr16.cpp  dev_dr16.hpp  info.cmake
src/device/icm42688/: Kconfig  dev_icm42688.cpp  dev_icm42688.hpp  info.cmake
src/device/imu/: Kconfig  dev_can_imu.cpp  dev_can_imu.hpp
src/firmware/: CMakeLists.txt  main.c
src/hal/: CMakeLists.txt  adc.c  adc.h  can.c  crc.c  dma.c  freertos.c  gpio.c  hal.c  hal.h  hal_can.h  hal_crc.c  hal_crc.h  hal_dcmi.c  hal_dcmi.h  hal_dma.h  hal_i2c.c  hal_i2c.h  hal_spi.c  hal_tim.c  hal_tim.h  hal_usart.c  hal_usart.h  hal_usb_otg.c  rng.c  spi.c  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  sys.h  tim.c  tim.h  usart.c  usart.h
src/middleware/: CMakeLists.txt  mid_cycle_buf.c  mid_cycle_buf.cpp  mid_cycle_buf.h  mid_cycle_buf.hpp  mid_msg_dist.c  mid_msg_dist.h  mid_msg_distrib.c  mid_msg_distrib.h  om_config.h
src/module/: CMakeLists.txt  Kconfig  chassis.c  dart_launcher.c  gimbal.c  gimbal.h  mod_cap.c  mod_cap.h  mod_chassis.c  mod_chassis.cpp  mod_chassis.h  mod_chassis.hpp  mod_config.c  mod_config.cpp  mod_config.h  mod_config.hpp  mod_dart_launcher.c  mod_dart_launcher.cpp  mod_dart_launcher.h  mod_dart_launcher.hpp  mod_dual_leg.cpp  mod_dual_leg.hpp  mod_gimbal.c  mod_gimbal.cpp  mod_gimbal.h  mod_gimbal.hpp  mod_launcher.c  mod_launcher.cpp  mod_launcher.h  mod_launcher.hpp  mod_ore_picker.cpp  mod_ore_picker.h  mod_ore_rotater.c  mod_ore_rotater.h  module.hpp
src/robot/: CMakeLists.txt  Kconfig
src/rtos/: CMakeLists.txt  FreeRTOSConfig.h  atti_esti.c  cli.c  info.c  init.c  referee.c  rtos.c  user_task.h
src/system/: CMakeLists.txt  list.cpp  list.hpp  memory.cpp  message.cpp  message.hpp  om_config.h  queue.cpp  queue.hpp  semaphore.cpp  semaphore.hpp  system.hpp  thread.cpp  thread.hpp  timer.cpp  timer.hpp
src/thread/: CMakeLists.txt  ai.c  ctrl_cap.c  ctrl_launcher.c  info.c  init.c  monitor.c  rc.c  thd.c  thd.cpp  thd.h  thd.hpp  thd_ai.c  thd_ai.cpp  thd_atti_esti.c  thd_atti_esti.cpp  thd_can.c  thd_can.cpp  thd_cap.c  thd_cap.cpp  thd_cli.c  thd_cli.cpp  thd_cmd.c  thd_cmd.cpp  thd_ctrl_cap.c  thd_ctrl_chassis.c  thd_ctrl_chassis.cpp  thd_ctrl_gimbal.c  thd_ctrl_gimbal.cpp  thd_ctrl_launcher.c  thd_ctrl_launcher.cpp  thd_imu.c  thd_imu.cpp  thd_info.c  thd_info.cpp  thd_init.c  thd_monitor.c  thd_monitor.cpp  thd_motor.c  thd_motor.cpp  (+17 more)
src/usb/: CMakeLists.txt  tusb_config.h  usb_descriptors.c  usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
src/xrobot/: GenerateMain.py  InitModule.py  ModuleCreator.py  ModuleParser.py  XRobotSetup.py
(+1726 files in other folders)
