cmake_minimum_required(VERSION 3.11)
project(device)

file(GLOB ${PROJECT_NAME}_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

INCLUDE_ALL_DIR(${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC)

target_sources(${PROJECT_NAME} PRIVATE ${${PROJECT_NAME}_SOURCES})



target_link_libraries(
  ${PROJECT_NAME}
  PRIVATE bsp
  PRIVATE component
  PRIVATE hal
  PRIVATE system
  PRIVATE OneMessage)

target_include_directories(
  ${PROJECT_NAME}
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
  PUBLIC ${${PROJECT_NAME}_INCLUDES}
  PUBLIC $<TARGET_PROPERTY:bsp,INTERFACE_INCLUDE_DIRECTORIES>
  PRIVATE $<TARGET_PROPERTY:system,INTERFACE_INCLUDE_DIRECTORIES>
  PRIVATE $<TARGET_PROPERTY:hal,INTERFACE_INCLUDE_DIRECTORIES>
  PRIVATE $<TARGET_PROPERTY:OneMessage,INTERFACE_INCLUDE_DIRECTORIES>
  PRIVATE $<TARGET_PROPERTY:component,INTERFACE_INCLUDE_DIRECTORIES>)

add_dependencies(${PROJECT_NAME} bsp component hal system OneMessage)
